--- a/software.html
+++ b/software.html
@@ -1,4 +1,49 @@
 <title>Software - BlackWave</title>
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Games - BlackWave</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <script>
+        // Apply saved theme instantly
+        (function() {
+            const savedTheme = localStorage.getItem('theme');
+            document.documentElement.setAttribute('data-theme', savedTheme || 'dark');
+        })();
+
+        // Update theme logo after load
+        document.addEventListener('DOMContentLoaded', function() {
+            const headerLogo = document.getElementById('header-logo');
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            headerLogo.src = currentTheme === 'dark'
+                ? 'images/darkmode-logo.jpg'
+                : 'images/lightmode-logo.jpg';
+        });
+
+        function toggleTheme() {
+            const current = document.documentElement.getAttribute('data-theme');
+            const next = current === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', next);
+            localStorage.setItem('theme', next);
+
+            const headerLogo = document.getElementById('header-logo');
+            headerLogo.src = next === 'dark'
+                ? 'images/darkmode-logo.jpg'
+                : 'images/lightmode-logo.jpg';
+        }
+    </script>
+</head>
+
 <h2>💻 Software</h2>
 <div class="links-container">
     <a href="https://appdoze.net/" target="_blank" class="link-field">
